2010-05-16  James Youngman  <jay@gnu.org>

	Remove support for CONFIG_MSDOS_FILES and lock methods other than
	CONFIG_PID_LOCKING.
	* src/fileiter.cc (sccs_file_iterator): Remove support for
	CONFIG_MSDOS_FILES.
	* src/sysdep.h: Remove support for CONFIG_MSDOS_FILES.
	* src/filelock.h (cleanup): Remove support for CONFIG_NO_LOCKING.
	* src/file.cc (create): Remove support for CONFIG_MSDOS_FILES.
	(create): Remove support for CONFIG_SHARE_LOCKING.
	(do_lock): Remove support for CONFIG_SHARE_LOCKING.
	* src/defaults.h: Remove support for types of locking other than
	CONFIG_PID_LOCKING.  Remove support for CONFIG_MSDOS_FILES.
	* src/file.h (enum create_mode): Likewise.

	Generate config.h.in by running bootstrap.
	* configure.ac: Call AC_CONFIG_HEADERS instead of the obsolete
	AM_CONFIG_HEADERS.  This causes bootstrap to call autoheader,
	which needs to happen for config.h.in to be generated.

	Eliminate stack.h and the stack<T> template, since it is not used.
	* unit-tests/Makefile.am (unit_tests): Remove test_stack.  Also
	eliminate test_stack_SOURCES.
	* src/seqstate.h: Don't include stack.h.
	* src/stack.h: Remove.
	* unit-tests/test_stack.cc: Remove.
	* src/Makefile.am (noinst_HEADERS): Remove stack.h.

2010-05-14  James Youngman  <jay@gnu.org>

	Don't configure in unit-tests/googletest, it's gone.
	* configure.ac: remove call to
	AC_CONFIG_SUBDIRS(unit-tests/googletest).

	Disable pthread support (since we don't use pthreads).
	* unit-tests/Makefile.am (AM_CPPFLAGS): Pass -DGTEST_HAS_PTHREAD=0.
	* configure.ac: Don't include
	unit-tests/googletest/m4/acx_pthread.m4. Remove --with-pthreads.
	* gl/lib/.gitignore: Remove gnulib.mk, dummy.c.

	Update Google C++ Test Framework version at bootstrap time.
	* bootstrap.conf (bootstrap_epilogue): call get-gtest.sh at
	bootstrap time.

	* unit-tests/get-gtest.sh: Use svn's --non-interactive option.

	Configure and build googletest in our own configure/Makefile.