@@ -29,11 +29,6 @@
 
 #include "cleanup.h"
 
-#if defined __GNUC__ \
-&& !(defined __APPLE__ && __GNUC__ == 3 && __GNUC_MINOR__ == 1)
-#pragma interface
-#endif
-
 class file_lock : private cleanup {
 	int locked;
 	mystring name;
