@@ -29,11 +29,6 @@
 
 #include "cssc-assert.h"
 
-#if defined __GNUC__ \
-&& !(defined __APPLE__ && __GNUC__ == 3 && __GNUC_MINOR__ == 1)
-#pragma interface
-#endif
-
 #include "cleanup.h"
 
 extern const char *prg_name;
