@@ -26,10 +26,6 @@
  */
 #include <cstring>
 
-#ifdef __GNUC__
-#pragma implementation "sccsdate.h"
-#endif
-
 #include "cssc.h"
 #include "sccsdate.h"
 #include "cssc-assert.h"
